// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsyncSelect should render correctly: default 1`] = `
<LazyComponentWrapper
  loadOptions={[MockFunction]}
/>
`;

exports[`Creatable should render correctly: clear button 1`] = `
<ClearButton
  className="button-tiny spacer-left text-middle"
  iconProps={
    Object {
      "size": 12,
    }
  }
/>
`;

exports[`Creatable should render correctly: default 1`] = `
<LazyComponentWrapper
  clearRenderer={[Function]}
/>
`;

exports[`Select should render correctly: clear button 1`] = `
<ClearButton
  className="button-tiny spacer-left text-middle"
  iconProps={
    Object {
      "size": 12,
    }
  }
/>
`;

exports[`Select should render correctly: default 1`] = `
<LazyComponentWrapper
  clearRenderer={[Function]}
  clearable={false}
  value="foo"
/>
`;

exports[`Select should render correctly: disable clear button if no value 1`] = `
<LazyComponentWrapper
  clearRenderer={[Function]}
  clearable={false}
/>
`;
